wrote several tests, small code and tabulation fixes